# FourFor

./: .gitmodules  CMakeLists.txt  README.md  Synopsis informatique.fodg  all-pi-command.sh  configuration informatique et vidéo.odt  fiche_technique_son.fodt  fiche_technique_son.odt  fourfor.service  new_pd_instance.command  patch phénix.odt  patch son.odt  push-to-rpi.sh  reboot-all-pi.sh  start-ecg.sh  start-pd-osx.command  start-pd.sh  start.sh  stop-fourfor-all-pi.sh  trigger_score.pd
Config_console/: 44cl5.CLF  44vivat.CLF  MIDAS-M32_FOR FOUR.scn  fourfor nantes.CLF  fourfor stras.CLF  fourfor.CLF  fourfor.M7C
Four2/: alto.pd  basse.pd  four2.pd  image_view.pd  img.pd  master.pd  player-delayed.pd  player.pd  randomf.pd  soprano.pd  tenor.pd
LidarOSC/: LidarOSC.ino  lidar_ossia.py  udp_server.py
LidarSlip/: 95-lidar.rules  LidarSlip.ino  ReadUSB-simple.py  ReadUSB.py  Receive_data.pd  install.sh  lidar.service  period.pd  start.sh
audio2midi/: Audio2Midi.pd
biomedical_display/: CMakeLists.txt  README.md  ofxShadertoy
biomedical_display/src/: biomedical_display.cpp  biomedical_display.h  main.cpp  ofApp.cpp  ofApp.h  oscilloscope.cpp  oscilloscope.h
biomedical_signal_generator/: ECG-midi.pd  ECG.pd  SpO2.pd  breath.pd  client.pd  fill_sample_list.pd  generator.pd  player.pd  pulse.txt  random_gen.pd  sampler.pd
chrono/: generate_timecode_image.pd
common/: selectMidiDevice.pd
common/src/: OssiaShader.cpp  OssiaShader.h  OssiaText.cpp  OssiaText.h
disklavier/: README.md  midi_over_udp.pd  midi_over_udp.service  raveloxmidi.conf  receive_midi.pd  start.sh
js-remote/: index.html  remote.html
midiplayer/: midiplayer.pd
midiplayer/MIDI_samples/: experiences_nb1-Piano1-20190214.mid  experiences_nb1-Piano1-20190219.mid  experiences_nb1-Piano1-vel_ok-20190219.mid  experiences_nb1-Piano1-vel_ok-directors_cut-20190219.mid  experiences_nb1-Piano2-20190214.mid  experiences_nb1-Piano2-20190219.mid  experiences_nb1-Piano2-vel_ok-20190219.mid  experiences_nb1-Piano2-vel_ok-directors_cut-20190219.mid  test.mid
midiplayer/MIDI_samples/1/: 1.mid  10.mid  11.mid  12.mid  13.mid  2.mid  3.mid  4.mid  5.mid  6.mid  7.mid  8.mid  9.mid
midiplayer/MIDI_samples/2/: 1.mid  10.mid  11.mid  12.mid  2.mid  3.mid  4.mid  5.mid  6.mid  7.mid  8.mid  9.mid
midiplayer/MIDI_samples/3/: 1.mid  2.mid
remote/: label.view.pd  oscillo.view.pd  remote.pd  score_trigger.pd
score/: FourFor-19.02.23.score  FourFor-19.02.25.score  FourFor-19.02.26-after-first.score  FourFor-19.02.27.score  FourFor-19.02.28.score  FourFor-19.03.01-fix_duration.score  FourFor-19.03.01.score  FourFor-19.03.02.score  FourFor-19.03.16.score  FourFor-19.04.02.score  FourFor-19.04.03.score  FourFor-debug.score  FourFor.score  FourFor_bug.score  fourfor-fixed.score
shaders/: Bad TV Auto Scroll.fs.fs  distorted TV.frag  distorted TV.fs  feedback.frag  feedback_ok.frag  video_glitch.fs  wooble.frag
subtitle/: subtitle.pd
video_player/: CMakeLists.txt  README.md
video_player/src/: OssiaText.cpp  OssiaText.h  SafeImage.h  SafePlayer.h  biomedical_display.cpp  biomedical_display.h  main.cpp  oscilloscope.cpp  oscilloscope.h  video_player.cpp  video_player.h  video_player_ghostfx.cpp
villerette/: analog_synth.pd  mapping.pd  receiveLidar.pd  receiveWiredLidar.pd  receivedWiredLidar.pd  villerette-midi.pd  villerette.pd  vinyl_synth.pd
