project(FourFor)

cmake_minimum_required(VERSION 3.10)
set(CMAKE_INSTALL_RPATH "$ORIGIN/lib:$ORIGIN")

set(OF_STATIC OFF CACHE BOOL "")

set(CMAKE_PREFIX_PATH "${CMAKE_SYSROOT}/opt/avahi/usr")
add_subdirectory(biomedical_display)
add_subdirectory(video_player)

set(OSSIA_ROOT libossia)

set(OSSIA_DATAFLOW OFF CACHE BOOL "")
set(OSSIA_EDITOR OFF CACHE BOOL "")
set(OSSIA_PD OFF CACHE BOOL "")
set(OSSIA_MAX OFF CACHE BOOL "")
set(OSSIA_PYTHON OFF CACHE BOOL "")
set(OSSIA_CPP ON CACHE BOOL "")
set(OSSIA_C OFF CACHE BOOL "")
set(OSSIA_PROTOCOL_MIDI OFF CACHE BOOL "")
set(OSSIA_PROTOCOL_AUDIO OFF CACHE BOOL "")
set(OSSIA_PROTOCOL_MINUIT OFF CACHE BOOL "")
set(OSSIA_PROTOCOL_OSCQUERY ON CACHE BOOL "")
set(OSSIA_PROTOCOL_OSC OFF CACHE BOOL "")
set(OSSIA_PROTOCOL_ARTNET OFF CACHE BOOL "")
set(OSSIA_PROTOCOL_WIIMOTE OFF CACHE BOOL "")
set(OSSIA_NO_INSTALL ON CACHE BOOL "")
set(OSSIA_DNSSD ON CACHE BOOL "")
set(OSSIA_STATIC OFF CACHE BOOL "")
add_subdirectory(${OSSIA_ROOT})

install(
  FILES
      "${CMAKE_CURRENT_BINARY_DIR}/libossia/OSSIA/libossia.so"
  DESTINATION lib
)

# These two lines are used to display the shaders in the project view of IDEs
file(GLOB SHADERS_SRC "${CMAKE_CURRENT_LIST_DIR}/shaders/*")
add_custom_target(shaders SOURCES ${SHADERS_SRC})

install(
  DIRECTORY
  "${CMAKE_CURRENT_LIST_DIR}/shaders"
  "${CMAKE_CURRENT_LIST_DIR}/videos"
  "${CMAKE_CURRENT_LIST_DIR}/images"
  DESTINATION data
  PATTERN ".git*" EXCLUDE
  PERMISSIONS OWNER_READ
              OWNER_WRITE
              GROUP_READ
              GROUP_WRITE
              WORLD_READ
              WORLD_WRITE
)

install(
  DIRECTORY
  "${CMAKE_CURRENT_LIST_DIR}/disklavier"
  DESTINATION .
  USE_SOURCE_PERMISSIONS
  PATTERN ".git*" EXCLUDE
)

install(
  FILES
  "${CMAKE_CURRENT_LIST_DIR}/start.sh"
  DESTINATION .
  PERMISSIONS OWNER_EXECUTE GROUP_EXECUTE OWNER_READ GROUP_READ WORLD_EXECUTE WORLD_READ
)
